# DEHamv2

./: .gitignore  Makefile.am  README.md  configure.ac
data/: c10chain.graphml  c11chain.graphml  c12chain.graphml  c13chain.graphml  c14chain.graphml  c15chain.graphml  c18chain.graphml  c3h4.graphml  c4h6.graphml  c5chain.graphml  c6h8.graphml  c7chain.graphml  c8chain.graphml  c9chain.graphml
src/: doubleexchange.c  doubleexchange.h  ex1.c  functions.c  functions.h  get_proj_general.c  get_proj_general.h  readgraphmllib.c  readgraphmllib.h  utils.c  utils.h
